# abs2rel

./: README.md  abs2rel.py  setup.cfg
abs2rel/: __main__.py
