[metadata]
name = abs2rel
version = 1.0.0
author = Kennedy Richard
author_email = kennedy@kennedyrichard.com
description = A python script that traverses a whole package turning local absolute imports into relative ones.
keywords = parsing, imports, text, python, code, substitution, replacement, script, package,
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
url = https://github.com/KennedyRichard/abs2rel
project_urls =
    Source = https://github.com/KennedyRichard/abs2rel
    Bug Tracker = https://github.com/KennedyRichard/abs2rel/issues
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing

[options]
packages =
    abs2rel
python_requires = >=3.6

[options.entry_points]
console_scripts =
    abs2rel = abs2rel.__main__:abs2rel
